{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Tank",
            "id": "be32b75f-c217-4cbf-9a2e-ed60b9b4360c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "30d0c15c-54a5-49bd-8c81-2663e843b37d",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "b28fb2a5-9aaa-4bb8-a9f6-7d1401bb4ea7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "ffaad4ff-afa8-4aa2-82ac-5859fa638f7d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "NextProjectile",
                    "type": "Button",
                    "id": "333a64cf-9296-45b9-ad66-1e0ef6c51559",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousProjectile",
                    "type": "Button",
                    "id": "ec214f1d-1fa0-47c9-a1ce-dd5ec020a188",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FocusCamera",
                    "type": "Button",
                    "id": "8f45b9c5-a57c-44ef-af9e-9bf4d3825d49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "b9a1fd91-6d10-4377-b3fd-c6687f26c9c4",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "56e6bf9e-ef52-4d26-b542-b09623e5548c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "Clamp",
                    "groups": "Desktop",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "0fa9e1b2-cf05-44c4-9eaf-833e6199d34a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "Clamp",
                    "groups": "Desktop",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "da8cd17f-9741-4306-9317-a5e37e842cfc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "Scale(factor=0.05)",
                    "groups": "Desktop",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "9460988a-27fc-4e2e-9587-5334a6012b95",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "Scale(factor=0.05)",
                    "groups": "Desktop",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Forward",
                    "id": "552023ac-6715-41e8-b84d-65e94b2cb4c5",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Backward",
                    "id": "fe20cf46-5e8c-4d86-b053-d0b1b4fcc7a7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fc3e2364-d447-458d-bbd7-4f40fffe3c13",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "772d1191-a406-497b-a91d-f1183b07ce9d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d86f1650-3dc1-4321-b68e-c6ce178db934",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "NextProjectile",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0b2f1ee-a69b-4f97-af9b-1376f869632c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Desktop",
                    "action": "PreviousProjectile",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c73fab3b-da34-439d-8dbd-2a39209bb79d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FocusCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Desktop",
            "bindingGroup": "Desktop",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}